test/typeCheckTest/pass/test10.ic
class MainWithMultipleArgs {
	void main (string [] args, string [] other) {
	
	}
}

class MainWithNoArgs {
	void main () {
	
	}
}

class RealMain {
	void main (string [] args) {
	
	}
}