test/typeCheckTest/fail/test14.ic
class BadBreak {
	void main (string [] args) {
		while (true) {
			break;
		}
		break;
	}
}